trying to set title img src from JS. including css class.

--- a/sm.css
+++ b/sm.css
@@ -7,13 +7,14 @@ body {
   padding: 0;
 }
 
-.top-img {
+.top-img.sm {
   color: #9f3f;
   text-align: center;
   font-size: 1.2em;
   padding: 1em;
   /* min-width: 40vw; */
-  max-width: 100%;
+  /* max-width: 100%; */
+  width: 100%;
   border: solid deeppink;
 
 
