--- a/med.css
+++ b/med.css
@@ -7,10 +7,10 @@ body {
   padding: 0;
 }
 
-.top-box {
-  width: 40%;
-  height: 1em;
-  /* height: fit-content; */
+.top-box.med {
+  display: block;
+  width: 60vw;
+  height: calc(60vw * .233);
   display: flex;
   justify-content: center;
   text-align: center;
@@ -18,16 +18,16 @@ body {
   padding: 0;
   transform: rotate(-4deg);
 
-  /* border: .2px solid deeppink; */
+  border: .2px solid green;
 }
 
-.top-img.med {
-  color: #9f3f;
-  padding: 1em;
-  width: 80vw;
-  height: calc(80vw * .233);
-  
-  border: solid deeppink;
+.top-box.med .top-img {
+  width: 100%;
+  border: solid white;
+}
+
+.top-box.sm, .top-box.lg {
+  display: none;
 }
 
 .background {
@@ -40,7 +40,7 @@ body {
 }
 
 
-.bg-sm {
+/* .bg-sm {
   display: none;
   z-index: -1;
   position: fixed;
@@ -48,8 +48,8 @@ body {
   height: 100vh;
   padding: 0;
   margin: 0 auto;
-}
-.bg-med {
+} */
+/* .bg-med {
   display: none;
   z-index: -1;
   position: fixed;
@@ -75,4 +75,4 @@ body {
   padding: 1em;
   margin: 0;
   /* border: .2px solid #9f3f; */
-}
+} */
