--- a/med.css
+++ b/med.css
@@ -13,6 +13,7 @@ body {
   height: calc(50vw * .233);
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
   margin: 1.5em auto;
   padding: 0;
@@ -26,20 +27,36 @@ body {
   /* border: solid white; */
 }
 
-.top-box.med .helpful {
+.popup {
+  display: none;
+
+  height: 80px;
   width: 80px;
+  border: solid red;
+}
+.top-box.med .popup {
+  display: none;
+}
+
+.top-box.med:hover .popup {
+  display: block;
+}
+
+.top-box.med .helpful {
+  width: 150px;
   margin: 0;
   color: #9ff;
   font-size: .7em;
   font-style: italic;
   min-height: 2em;
-  border: solid 4px peru;
+  /* border: solid 4px peru; */
 }
 
 .bottom-box.med {
   position: absolute;
   bottom: 50vh;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   width: 99vw;
   margin: auto;
@@ -47,20 +64,25 @@ body {
 }
 
 .bottom-box.med .bottom-img1 {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  /* border: .3px solid #9ff; */
+  position: absolute;
+  top: -110px;
+  right: 9vw;
+  width: 15vw;
+  height: 15vw;
+  border: 2px inset #9ff;
   filter: brightness(150%);
-  padding-right: 1em;
   margin: 1em;
+  transform: rotate(-15deg);
   
 }
 .bottom-box.med .bottom-img2 {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  /* border: .3px solid #9ff; */
+  position: absolute;
+  top: 10px;
+  left: 13vw;
+  width: 18vw;
+  height: 18vw;
+  border: 2px inset #9f4;
   filter: brightness(180%);
   margin: 1em;
+  transform: rotate(11deg);
 }
